[package]
name = "secondbevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] } #remove dynamic linking for release version
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
iyes_perf_ui = "0.5"
noise = "0.9.0"
rand = "0.9.0"
bevy_panorbit_camera = "0.28.0"
bevy_rapier3d = "0.31.0"
#bevy_rich_text3d = "0.4.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
